seedboxk8s/applications/lidarr/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - image: linuxserver/lidarr
          name: lidarr
          ports:
            - containerPort: 8686
          volumeMounts:
            - mountPath: /config
              name: lidarr-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: lidarr-config-pvc
          persistentVolumeClaim:
            claimName: lidarr-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
