seedboxk8s/applications/lidarr/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
  namespace: tortuga
spec:
  replicas: 1
  serviceName: lidarr
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        # https://github.com/linuxserver/docker-lidarr/releases
        - image: ghcr.io/linuxserver/lidarr:3.1.0.4875-ls14
          name: lidarr
          ports:
            - containerPort: 8686
          volumeMounts:
            - mountPath: /config
              name: lidarr-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: lidarr-config-pvc
          persistentVolumeClaim:
            claimName: lidarr-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
