seedboxk8s/applications/lidarr/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: lidarr
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8686
