seedboxk8s/applications/lidarr/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Lidarr
    gethomepage.dev/group: Media
    gethomepage.dev/icon: lidarr
    gethomepage.dev/href: https://lidarr.${productionClusterFqdn}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: lidarr
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
